# cloudfide-test

./: .gitignore  README.md  pyproject.toml  scratchpad.ipynb  solution.py  test_extra.py
