[project]
name = "cloudfide-test"
version = "0.1.0"
description = ""
authors = [
    {name = "kw-00",email = "christopher.p.wojcik@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
